[gd_scene load_steps=16 format=3 uid="uid://drhox32vpbgou"]

[ext_resource type="Texture2D" uid="uid://dvvb3o5w1gsoe" path="res://Assets/UI/Buttons/Button_Hover_9Slides.png" id="1_8i2do"]
[ext_resource type="Script" uid="uid://cbqj261g86xg3" path="res://scenes/systems/PowerUps/power_up_card.gd" id="2_1lx0b"]
[ext_resource type="Texture2D" uid="uid://5a726lkku3qm" path="res://Assets/UI/Banners/Banner_Horizontal.png" id="2_6j4nn"]
[ext_resource type="FontFile" uid="uid://rxmx4et71ae5" path="res://Assets/font/AlbertTextBold.otf" id="3_8i2do"]
[ext_resource type="FontFile" uid="uid://csg3yg6tsxdt8" path="res://Assets/font/AlbertText-Bold.ttf" id="4_fyo2m"]
[ext_resource type="Texture2D" uid="uid://ccgyf6mph2q3k" path="res://Assets/Resources/Resources/G_Idle_(NoShadow).png" id="5_6j4nn"]
[ext_resource type="Texture2D" uid="uid://bvclmnseaa5vw" path="res://Assets/UI/Buttons/Button_Hover.png" id="5_2456y"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fyo2m"]
texture = ExtResource("1_8i2do")
expand_margin_left = 13.0
expand_margin_right = 13.0
expand_margin_bottom = 13.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2456y"]
texture = ExtResource("2_6j4nn")
expand_margin_left = 25.0
expand_margin_right = 25.0

[sub_resource type="LabelSettings" id="LabelSettings_fyo2m"]
font = ExtResource("3_8i2do")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_1lx0b"]

[sub_resource type="LabelSettings" id="LabelSettings_1lx0b"]
font = SubResource("FontVariation_1lx0b")
font_size = 17
font_color = Color(0.9955804, 0.99558026, 0.99558026, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2456y"]
line_spacing = 0.0
font = ExtResource("4_fyo2m")
font_size = 30
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lx0b"]
atlas = ExtResource("5_6j4nn")
region = Rect2(46, 49, 45, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6j4nn"]
texture = ExtResource("5_2456y")
texture_margin_left = 17.0
texture_margin_top = 10.0
texture_margin_right = 17.0
texture_margin_bottom = 25.0

[node name="PowerUpCard" type="Panel"]
offset_right = 220.0
offset_bottom = 280.0
scale = Vector2(10.236609, 9.799999)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_fyo2m")
script = ExtResource("2_1lx0b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9978546, 1)

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2456y")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 4

[node name="PowerName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "bla bla"
label_settings = SubResource("LabelSettings_fyo2m")
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 11
theme_override_constants/margin_right = 8

[node name="PowerDescription" type="Label" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "bla blakkkkkkkkkkkkkkkkkkkkkkkkkkkkk"
label_settings = SubResource("LabelSettings_1lx0b")
autowrap_mode = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_right = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="PowerPrice" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "230"
label_settings = SubResource("LabelSettings_2456y")
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(35, 12)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_1lx0b")
expand_mode = 1
stretch_mode = 5

[node name="BuyButton" type="Button" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_fyo2m")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxTexture_6j4nn")
text = "Comprar"
